--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.3"
+    "react-native": "0.70.3",
+    "react-native-nfc-manager": "^3.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
